clean code header + border

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
 
         <section>
-            <article class="article--top">
+            <article class="article--left">
                 <div class="article__title">
                     <div>
                         <h4 class="article__tag article__tag--news">NEWS</h4>
@@ -57,7 +57,7 @@
                 </figcaption>
             </article>
 
-            <article class="article--top">
+            <article class="article--right">
                 <div class="article__title">
                     <div>
                         <h4 class="article__tag article__tag--team">TEAM</h4>
@@ -75,7 +75,7 @@
                 </figcaption>
             </article>
 
-            <article class="article--middle">
+            <article class="article--left">
                 <div class="article__title">
                     <div>
                         <h4 class="article__tag article__tag--work">WORK</h4>
@@ -93,7 +93,7 @@
                 </figcaption>
             </article>
 
-            <article class="article--middle">
+            <article class="article--right">
                 <div class="article__title">
                     <div>
                         <h4 class="article__tag article__tag--news">NEWS</h4>
@@ -111,7 +111,7 @@
                 </figcaption>
             </article>
 
-            <article class="article--bottom">
+            <article class="article--left">
                 <div class="article__title">
                     <div>
                         <h4 class="article__tag article__tag--news">NEWS</h4>
@@ -129,7 +129,7 @@
                 </figcaption>
             </article>
 
-            <article class="article--bottom">
+            <article class="article--right">
                 <div class="article__title">
                     <div>
                         <h4 class="article__tag article__tag--news">NEWS</h4>
